--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 31 17:03:12 IST 2021
-sdk.dir=C\:\\Users\\22him\\AppData\\Local\\Android\\Sdk
+#Sat Jul 17 00:46:39 IST 2021
+sdk.dir=C\:\\Users\\acer\\AppData\\Local\\Android\\Sdk
