--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Jul 17 00:46:39 IST 2021
-sdk.dir=C\:\\Users\\acer\\AppData\\Local\\Android\\Sdk
+sdk.dir= C\:\\Users\\22him\\AppData\\Local\\Android\\Sdk
